Deployment/drupal-mysql.yaml
# mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal-mysql
  template:
    metadata:
      labels:
        app: drupal-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: drupal-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: drupal-mysql
